...
                        disabledContainerColor = PrimaryVariant.copy(alpha = 0.5f),
                        disabledContentColor = Color.Black.copy(alpha = 0.5f)
                    )
                ) {
                    Icon(
                        imageVector = Icons.Default.Check,
                        contentDescription = "Done",
                        modifier = Modifier.size(20.dp)
                    )
                }
            }
        }
    }
...
