...
        containerColor = PrimaryVariant,
        contentColor = Color.Black,
        shape = RoundedCornerShape(16.dp)
    ) {
        Icon(
            imageVector = Icons.Default.Add,
            contentDescription = "Add expense",
            modifier = Modifier.size(24.dp)
        )
    }
}

@Composable
...
